--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,8 @@
       <p appBasicHighlight>Style me with basic directive!</p>
       <p [appBetterHighlight]="'red'" defaultColor="yellow">Style me with a better directive!</p>
       <div [ngSwitch]="value">
+        <!-- we bind a ngSwitch to not use the bind
+        ngSwitch is good for many ngIf cases gathered everything in one place-->
         <p *ngSwitchCase="5">Value is 5</p>
         <p *ngSwitchCase="10">Value is 10</p>
         <p *ngSwitchCase="100">Value is 100</p>
